frontend/src/components/ToiletCard/styles.css
.toil-card {
    width: calc(50% - 0.5rem);
    border-radius: 1.2rem;
    margin-bottom: 1rem;
    box-sizing: border-box;
    background-color: white;
    border-width: 0.05rem;
    border-style: solid;
    border-color: var(--color-border-grey);
    overflow: hidden;
    transform: scale(1);
    transition: transform 0.1s ease-in-out;
}

.toil-card.mini {
    width: 10rem;
    height: 13rem;
    margin-bottom: 0;
    box-shadow: 0 0.4rem 0.8rem 0 rgba(0,0,0,0.2);
    border: none;
}

.toil-card.mini h3 {
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.toil-card:active {
    transform: scale(0.95);
}

.card-info {
    padding: 0.4rem 0.8rem 0.6rem 0.8rem;
}

.card-info .rating-container {
    margin-top: 0.5rem;
}

.card-subtitle {
    display: flex;
    align-items: center;
    color: #ACACAC;
}

.card-subtitle p {
    font-family: "Inter";
    font-size: 0.9rem;
    font-weight: 500;
    margin: 0;
}

.card-subtitle-dot {
    width: 0.3rem;
    height: 0.3rem;
    background-color: var(--color-secondary);
    border-radius: 0.3rem;
    margin: 0 0.5rem;
}

.card-subtitle svg {
    font-size: 1.4rem;
}

.card-image {
    width: 100%;
    height: 7rem;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}

.gender-icon {
    height: 1.8rem;
    margin-left: 0.2rem;
}

.gender-icon-container {
    margin: 0.8rem 0.8rem 0 0;
    float: right;
}

.features {
    display: flex;
    flex-wrap: wrap;
    margin-top: 0.2rem;
}

.features .feature-lists {
    margin-right: 0.5rem;
}

.features .feature-lists:last-child {
    margin-right: 0;
}

